test/files/neg/t11690.check
t11690.scala:11: warning: Unused import
  import X._
           ^
error: No warnings can be incurred under -Werror.
one warning found
one error found
